src/objects/Observation_Machine__c.object
<CustomObject>
    <fields>
        <fullName>Account_Location_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Apttus_Config2__AccountLocation__c.Apttus_Config2__AccountId__r.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Competitor Assets</relationshipLabel>
        <relationshipName>Competitor_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <label>Asset Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Assets (Account)</relationshipLabel>
        <relationshipName>Observation_Machines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archiving_Flag_TimeStamp__c</fullName>
        <label>Date and Time Asset Archived</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archiving_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archiving Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archiving_Reason__c</fullName>
        <label>Archiving Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Archiving_Flag__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset no longer in use</fullName>
                </value>
                <value>
                    <fullName>Invalid Asset</fullName>
                </value>
                <value>
                    <fullName>Customer inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Assets (Brand)</relationshipLabel>
        <relationshipName>Competitor_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concept__c</fullName>
        <label>Concept</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Concept</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Conditions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_ID__c</fullName>
        <externalId>true</externalId>
        <label>Conversion ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_6864</fullName>
                    <label>Norway</label>
                </value>
                <value>
                    <fullName>SAP_0976</fullName>
                    <label>Sweden</label>
                </value>
                <value>
                    <fullName>SAP_0975</fullName>
                    <label>Denmark</label>
                </value>
                <value>
                    <fullName>SAP_0333</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>SAP_6706</fullName>
                    <label>France</label>
                </value>
                <value>
                    <fullName>SAP_0080</fullName>
                    <label>Spain</label>
                </value>
                <value>
                    <fullName>SAP_0111</fullName>
                    <label>Netherlands</label>
                </value>
                <value>
                    <fullName>SAP_6709</fullName>
                    <label>Ireland</label>
                </value>
                <value>
                    <fullName>SAP_6712</fullName>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>SAP_6750</fullName>
                    <label>Great Britain</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF(Data_Quality_Score__c == 100, &apos;All Competitor Assets Captured&apos;, &apos;Missing: &apos; &amp;BR()
&amp;IF (ISBLANK(Brand__c),&apos;Brand &apos; &amp;BR(),&apos;&apos;) 
&amp;IF (ISBLANK(Supplier__c), &apos;Supplier &apos;  &amp;BR() , &apos;&apos;) 
&amp;IF (ISBLANK(TEXT(Occasion__c)),&apos;Occasion &apos; &amp;BR() ,&apos;&apos;) 
&amp;IF (ISBLANK(Quantity__c), &apos;Quantity &apos; &amp;BR() , &apos;&apos;) 
&amp;IF (ISBLANK(Expiration_Date_Contract__c), &apos;Expiration Date Contract &apos; &amp;BR() , &apos;&apos;) 
&amp;IF (ISBLANK(TEXT(Concept__c)), &apos;Concept&apos;, &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF (MFLOOR(IF(NOT(ISBLANK(Brand__c)), 16.67, 0) + IF(NOT(ISBLANK(Supplier__c)), 16.67, 0) + IF(NOT(ISBLANK(TEXT(Occasion__c))), 16.67, 0) + IF(NOT(ISBLANK(Quantity__c)), 16.67, 0) + IF(NOT(ISBLANK(Expiration_Date_Contract__c)), 16.67, 0) + IF(NOT(ISBLANK (TEXT(Concept__c))), 16.67, 0)) &gt;= 100, MFLOOR(IF(NOT(ISBLANK(Brand__c)), 16.67, 0) + IF(NOT(ISBLANK(Supplier__c)), 16.67, 0) + IF(NOT(ISBLANK(TEXT(Occasion__c))), 16.67, 0) + IF(NOT(ISBLANK(Quantity__c)), 16.67, 0) + IF(NOT(ISBLANK(Expiration_Date_Contract__c)), 16.67, 0) + IF(NOT(ISBLANK (TEXT(Concept__c))), 16.67, 0)),IF(NOT(ISBLANK(Brand__c)), 16.67, 0) + IF(NOT(ISBLANK(Supplier__c)), 16.67, 0) + IF(NOT(ISBLANK(TEXT(Occasion__c))), 16.67, 0) + IF(NOT(ISBLANK(Quantity__c)), 16.67, 0) + IF(NOT(ISBLANK(Expiration_Date_Contract__c)), 16.67, 0) + IF(NOT(ISBLANK (TEXT(Concept__c))), 16.67, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Contract__c</fullName>
        <label>Expiration Date Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kind__c</fullName>
        <label>Kind</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Kind</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mgmt_Organization__c</fullName>
        <label>Mgmt Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_MgmtOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occasion__c</fullName>
        <label>Occasion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Occassion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optional_Years__c</fullName>
        <label>Optional Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Assets (Supplier)</relationshipLabel>
        <relationshipName>Competitor_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Of__c</fullName>
        <label>Year Of</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Competitor Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Occasion__c</columns>
        <columns>Concept__c</columns>
        <columns>Expiration_Date_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA{0000000000}</displayFormat>
        <label>Competitor Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Archiving_Reason_CA</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.Competitor_Assets__c, Archiving_Flag__c = true, ISPICKVAL(Archiving_Reason__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Archiving_Reason__c</errorDisplayField>
        <errorMessage>Please set an Archiving Reason</errorMessage>
    </validationRules>
</CustomObject>